commit translated contents

--- a/articles/active-directory-b2c/TOC.yml
+++ b/articles/active-directory-b2c/TOC.yml
@@ -56,6 +56,8 @@
           href: active-directory-b2c-overview-custom.md
         - name: Gebruikerstoegang
           href: manage-user-access.md
+    - name: JavaScript en paginacontracten
+      href: user-flow-javascript-overview.md
     - name: OAuth 2.0
       href: active-directory-b2c-reference-oauth-code.md
     - name: OpenID Connect
@@ -70,8 +72,6 @@
       href: manage-user-data.md
     - name: Gebruikersstromen
       href: active-directory-b2c-reference-policies.md
-    - name: Gebruikersstromen met JavaScript
-      href: user-flow-javascript-overview.md
     - name: Aanpassing van de gebruikersinterface
       href: customize-ui-overview.md
 - name: Handleidingen
