--- a/articles/active-directory/conditional-access/TOC.yml
+++ b/articles/active-directory/conditional-access/TOC.yml
@@ -40,10 +40,10 @@
       href: best-practices.md
     - name: Verouderde verificatie blokkeren
       href: block-legacy-authentication.md
-    - name: Toegang tot Exchange Online en SharePoint Online beheren
-      href: conditional-access-for-exo-and-spo.md
     - name: Klassieke beleidsregels migreren
       href: policy-migration.md
+    - name: Aanmeldingsfrequentie en besturingselementen voor browserpersistentie
+      href: howto-conditional-access-session-lifetime.md
     - name: Goedgekeurde client-apps vereisen
       href: app-based-conditional-access.md
     - name: Beleid voor app-beveiliging vereisen
