--- a/articles/analysis-services/TOC.yml
+++ b/articles/analysis-services/TOC.yml
@@ -70,41 +70,10 @@
           href: analysis-services-deploy.md
         - name: Vernieuwen met REST-API
           href: analysis-services-async-refresh.md
-        - name: Gegevens modelleren in Visual Studio - zelfstudie Adventure Works (1400)
-          href: tutorials/aas-adventure-works-tutorial.md
-          items:
-            - name: 1 - Een project voor een tabellair model maken
-              href: tutorials/aas-lesson-1-create-a-new-tabular-model-project.md
-            - name: 2 - Gegevens ophalen
-              href: tutorials/aas-lesson-2-get-data.md
-            - name: 3 - Als datumtabel markeren
-              href: tutorials/aas-lesson-3-mark-as-date-table.md
-            - name: 4 - Relaties maken
-              href: tutorials/aas-lesson-4-create-relationships.md
-            - name: 5 - Berekende kolommen maken
-              href: tutorials/aas-lesson-5-create-calculated-columns.md
-            - name: 6 - Metingen maken
-              href: tutorials/aas-lesson-6-create-measures.md
-            - name: 7 - Key Performance Indicators maken
-              href: tutorials/aas-lesson-7-create-key-performance-indicators.md
-            - name: 8 - Perspectieven maken
-              href: tutorials/aas-lesson-8-create-perspectives.md
-            - name: 9 - Hiërarchieën maken
-              href: tutorials/aas-lesson-9-create-hierarchies.md
-            - name: 10 - Partities maken
-              href: tutorials/aas-lesson-10-create-partitions.md
-            - name: 11 - Rollen maken
-              href: tutorials/aas-lesson-11-create-roles.md
-            - name: 12 - Analyseren in Excel
-              href: tutorials/aas-lesson-12-analyze-in-excel.md
-            - name: 13 - Implementeren
-              href: tutorials/aas-lesson-13-deploy.md
-            - name: 'Aanvullende les: Detailrijen'
-              href: tutorials/aas-supplemental-lesson-detail-rows.md
-            - name: 'Aanvullende les: Dynamische beveiliging'
-              href: tutorials/aas-supplemental-lesson-dynamic-security.md
-            - name: 'Aanvullende les: Onregelmatige hiërarchieën'
-              href: tutorials/aas-supplemental-lesson-ragged-hierarchies.md
+        - name: Vernieuwen met Logic Apps
+          href: analysis-services-refresh-logic-app.md
+        - name: Vernieuwen met Azure Automation
+          href: analysis-services-refresh-azure-automation.md
     - name: Beveiliging
       items:
         - name: Databasegebruikers beheren
