--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -129,6 +129,8 @@
           href: platform/activity-log-alerts.md
         - name: Algemeen waarschuwingsschema
           href: platform/alerts-common-schema.md
+        - name: Actieregels
+          href: platform/alerts-action-rules.md
     - name: Gegevens visualiseren
       href: visualizations.md
     - name: Partnerintegraties
@@ -309,6 +311,29 @@
                   href: app/asp-net.md
                 - name: Status Monitor
                   href: app/monitor-performance-live-website-now.md
+                - name: Status Monitor v2
+                  href: app/status-monitor-v2-overview.md
+                  items:
+                    - name: Aan de slag
+                      href: app/status-monitor-v2-get-started.md
+                    - name: Gedetailleerde instructies
+                      href: app/status-monitor-v2-detailed-instructions.md
+                    - name: Probleemoplossing en bekende problemen
+                      href: app/status-monitor-v2-troubleshoot.md
+                    - name: API Disable-InstrumentationEngine
+                      href: app/status-monitor-v2-api-disable-instrumentation-engine.md
+                    - name: API Disable-ApplicationInsightsMonitoring
+                      href: app/status-monitor-v2-api-disable-monitoring.md
+                    - name: API Enable-InstrumentationEngine
+                      href: app/status-monitor-v2-api-enable-instrumentation-engine.md
+                    - name: API Enable-ApplicationInsightsMonitoring
+                      href: app/status-monitor-v2-api-enable-monitoring.md
+                    - name: API Get-ApplicationInsightsMonitoringConfig
+                      href: app/status-monitor-v2-api-get-config.md
+                    - name: API Get-ApplicationInsightsMonitoringStatus
+                      href: app/status-monitor-v2-api-get-status.md
+                    - name: API Set-ApplicationInsightsMonitoringConfig
+                      href: app/status-monitor-v2-api-set-config.md
                 - name: Windows-services
                   href: app/windows-services.md
                 - name: Windows-bureaublad
@@ -560,6 +585,8 @@
               href: insights/containers.md
             - name: Docker-toepassingen bewaken
               href: app/docker.md
+            - name: Application Insights voor Kubernetes
+              href: app/kubernetes.md
         - name: Resourcegroepen controleren
           href: insights/resource-group-insights.md
         - name: Databases bewaken
@@ -684,6 +711,8 @@
               href: platform/metrics-charts.md
             - name: Voorbeelden van grafieken met metrische gegevens
               href: platform/metric-chart-samples.md
+            - name: Problemen met grafieken met metrische gegevens oplossen
+              href: platform/metrics-troubleshoot.md
         - name: Logboeken
           items:
             - name: Logboekquery's
