--- a/articles/azure-resource-manager/toc.yml
+++ b/articles/azure-resource-manager/toc.yml
@@ -68,6 +68,8 @@
       href: resource-group-delete.md
     - name: Resource Manager en klassieke implementatie
       href: resource-manager-deployment-model.md
+    - name: Algemene Azure-beveiligingskenmerken
+      href: azure-resource-manager-security-attributes.md
 - name: Procedures
   items:
     - name: Sjablonen maken
@@ -225,6 +227,8 @@
           href: move-support-resources.md
         - name: Tag-ondersteuning
           href: tag-support.md
+    - name: Resourceproviders per service
+      href: azure-services-resource-providers.md
     - name: REST - Resource Manager
       href: /rest/api/resources/
     - name: REST - Configuratiebeheer
