--- a/articles/cost-management/toc.yml
+++ b/articles/cost-management/toc.yml
@@ -34,6 +34,10 @@
           href: assign-access-acm-data.md
         - name: Kostenwaarschuwingen gebruiken
           href: cost-mgt-alerts-monitor-usage-spending.md
+        - name: AWS-integratie instellen en configureren
+          href: aws-integration-set-up-configure.md
+        - name: Kosten en gebruik van AWS beheren
+          href: aws-integration-manage.md
     - name: Naslaginformatie
       items:
         - name: Azure Cost Management REST API
