--- a/articles/databox/TOC.yml
+++ b/articles/databox/TOC.yml
@@ -70,6 +70,8 @@
                   href: ../storage/blobs/data-lake-storage-migrate-on-premises-hdfs-cluster.md?toc=/azure/databox/toc.json&bc=/azure/databox/breadcrumb/toc.json
             - name: Problemen oplossen
               items:
+                - name: Problemen met Data Box
+                  href: data-box-troubleshoot.md
                 - name: Blobopslagproblemen in Data Box
                   href: data-box-troubleshoot-rest.md
     - name: Data Box Disk
