--- a/articles/dms/toc.yml
+++ b/articles/dms/toc.yml
@@ -22,8 +22,12 @@
       href: tutorial-rds-sql-server-azure-sql-and-managed-instance-online.md
     - name: MySQL online migreren naar Azure Database for MySQL
       href: tutorial-mysql-azure-mysql-online.md
+    - name: RDS MySQL online migreren naar Azure Database for MySQL
+      href: tutorial-rds-mysql-server-azure-db-for-mysql-online.md
     - name: PostgreSQL online migreren naar Azure Database for PostgreSQL
       href: tutorial-postgresql-azure-postgresql-online.md
+    - name: RDS PostgreSQL online migreren naar Azure Database for PostgreSQL
+      href: tutorial-rds-postgresql-server-azure-db-for-postgresql-online.md
     - name: MongoDB offline migreren naar de Azure Cosmos DB Mongo-API
       href: tutorial-mongodb-cosmos-db.md
     - name: MongoDB online migreren naar de Azure Cosmos DB Mongo-API
