--- a/articles/iot-edge/TOC.yml
+++ b/articles/iot-edge/TOC.yml
@@ -13,28 +13,44 @@
       href: quickstart.md
 - name: Zelfstudies
   items:
-    - name: Gegevens filteren met Azure Functions
-      href: tutorial-deploy-function.md
-    - name: Gemiddelden vinden met ASA
-      href: tutorial-deploy-stream-analytics.md
-    - name: Gegevens een score geven met Azure Machine Learning-service
-      href: tutorial-deploy-machine-learning.md
-    - name: Afbeeldingen classificeren met Custom Vision
-      href: tutorial-deploy-custom-vision.md
-    - name: Gegevens lokaal opslaan met SQL
-      href: tutorial-store-data-sql-server.md
-    - name: Aangepaste codemodules ontwikkelen
+    - name: 1. De ontwikkelomgeving instellen
       items:
+        - name: Ontwikkelen voor Linux-apparaten
+          href: tutorial-develop-for-linux.md
+        - name: Ontwikkelen voor Windows-apparaten
+          href: tutorial-develop-for-windows.md
+    - name: 2. Aangepaste codemodules ontwikkelen
+      items:
+        - name: C
+          items:
+            - name: C-modules voor Linux-apparaten
+              href: tutorial-c-module.md
+            - name: C-modules voor Windows-apparaten
+              href: tutorial-c-module-windows.md
         - name: 'C#'
-          href: tutorial-csharp-module.md
-        - name: Python
-          href: tutorial-python-module.md
-        - name: Node.js
-          href: tutorial-node-module.md
+          items:
+            - name: 'C#-modules voor Linux-apparaten'
+              href: tutorial-csharp-module.md
+            - name: 'C#-modules voor Windows-apparaten'
+              href: tutorial-csharp-module-windows.md
         - name: Java
           href: tutorial-java-module.md
-        - name: C
-          href: tutorial-c-module.md
+        - name: Node.js
+          href: tutorial-node-module.md
+        - name: Python
+          href: tutorial-python-module.md
+    - name: 3. Azure-services implementeren als modules
+      items:
+        - name: Gegevens filteren met Azure Functions
+          href: tutorial-deploy-function.md
+        - name: Gemiddelden vinden met ASA
+          href: tutorial-deploy-stream-analytics.md
+        - name: Gegevens een score geven met Azure Machine Learning-service
+          href: tutorial-deploy-machine-learning.md
+        - name: Afbeeldingen classificeren met Custom Vision
+          href: tutorial-deploy-custom-vision.md
+        - name: Gegevens lokaal opslaan met SQL
+          href: tutorial-store-data-sql-server.md
 - name: Concepten
   items:
     - name: IoT Edge-runtime
