--- a/articles/virtual-desktop/TOC.yml
+++ b/articles/virtual-desktop/TOC.yml
@@ -44,6 +44,18 @@
       href: delegated-access-virtual-desktop.md
     - name: Taakverdelingsmethoden voor hostpool
       href: host-pool-load-balancing.md
+- name: Problemen oplossen
+  items:
+    - name: 'Probleemoplossingsoverzicht, feedback en ondersteuning'
+      href: troubleshoot-set-up-overview.md
+    - name: Tenants en hostpools maken
+      href: troubleshoot-set-up-issues.md
+    - name: Configuratie van sessiehost-VM's
+      href: troubleshoot-vm-configuration.md
+    - name: Clientverbindingen met extern bureaublad
+      href: troubleshoot-client-connection.md
+    - name: Windows Virtual Desktop PowerShell
+      href: troubleshoot-powershell.md
 - name: Naslaginformatie
   items:
     - name: PowerShell
