--- a/articles/application-gateway/toc.yml
+++ b/articles/application-gateway/toc.yml
@@ -45,6 +45,8 @@
           href: application-gateway-components.md
         - name: Configuratieoverzicht
           href: configuration-overview.md
+    - name: SKU voor automatisch schalen v2
+      href: application-gateway-autoscaling-zone-redundant.md
     - name: Routering
       items:
         - name: Meerdere sites hosten
@@ -77,8 +79,6 @@
           href: application-gateway-probe-overview.md
         - name: Diagnostiek
           href: application-gateway-diagnostics.md
-    - name: Automatisch schalen en zoneredundantie
-      href: application-gateway-autoscaling-zone-redundant.md
     - name: App Service-web-app en ondersteuning voor meerdere tenants
       href: application-gateway-web-app-overview.md
     - name: Ondersteuning voor WebSocket
@@ -183,6 +183,8 @@
           href: rewrite-http-headers-portal.md
         - name: Azure PowerShell
           href: add-http-header-rewrite-rule-powershell.md
+        - name: HTTP-headers maken en opnieuw genereren
+          href: tutorial-http-header-rewrite-powershell.md
     - name: Service met App Service-web-app en meerdere tenants configureren
       items:
         - name: Portal
