--- a/articles/sql-database/toc.yml
+++ b/articles/sql-database/toc.yml
@@ -232,8 +232,6 @@
     - name: Beveiliging
       items:
         - name: Beveiligingsoverzicht
-          href: sql-database-security-index.yml
-        - name: Beveiligingsmogelijkheden
           href: sql-database-security-overview.md
           displayName: 'compliance, fedramp, soc, fact, fisc, hitrust, pci, iso'
         - name: Advanced Data Security
@@ -356,9 +354,9 @@
           href: sql-database-temporal-tables.md
         - name: Automatisering van taken
           href: sql-database-job-automation-overview.md
-        - name: Machine learning
+        - name: Machine Learning Services
           items:
-            - name: Overzicht van machine learning
+            - name: Overzicht
               href: sql-database-machine-learning-services-overview.md
             - name: Belangrijke verschillen
               href: sql-database-machine-learning-services-differences.md
@@ -474,6 +472,8 @@
           href: sql-database-managed-instance-threat-detection.md
         - name: Toepassingen koppelen
           href: sql-database-managed-instance-connect-app.md
+        - name: Openbaar eindpunt configureren
+          href: sql-database-managed-instance-public-endpoint-configure.md
     - name: Gegevens laden en verplaatsen
       items:
         - name: Een database kopiëren binnen Azure
@@ -658,6 +658,8 @@
           href: sql-database-machine-learning-services-functions.md
         - name: Werken met R- en SQL-gegevens
           href: sql-database-machine-learning-services-data-issues.md
+        - name: R-pakketten toevoegen
+          href: sql-database-machine-learning-services-add-r-packages.md
 - name: Naslaginformatie
   items:
     - name: Azure PowerShell
