--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -80,6 +80,8 @@
               href: storage-create-geo-redundant-storage.md
             - name: 2 - Een fout met RA-GRS-opslag simuleren
               href: storage-simulate-failure-ragrs-account-app.md
+        - name: Blobs versleutelen en ontsleutelen met Azure Key Vault
+          href: storage-encrypt-decrypt-blobs-key-vault.md
         - name: Niet-gestructureerde gegevens zoeken
           href: storage-unstructured-search.md
     - name: Voorbeelden
@@ -98,6 +100,10 @@
           href: ../common/storage-account-overview.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: Beveiliging
           items:
+            - name: Beveiligingsoverzicht
+              href: ../common/storage-security-guide.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: Storage Service-versleuteling
+              href: ../common/storage-service-encryption.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Autorisatie
               href: ../common/storage-auth.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
               items:
@@ -109,24 +115,10 @@
                   href: ../common/storage-dotnet-shared-access-signature-part-1.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: Anonieme toegang tot blobs
                   href: storage-manage-access-to-resources.md
-            - name: Beveiligingshandleiding
-              href: ../common/storage-security-guide.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Firewalls en virtuele netwerken configureren
-              href: ../common/storage-network-security.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Versleuteling van data-at-rest
-              href: ../common/storage-service-encryption.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Versleuteling 'at rest' met sleutels van de klant
-              href: ../common/storage-service-encryption-customer-managed-keys.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: De Azure CDN gebruiken om toegang te krijgen tot blobs met aangepaste domeinen via HTTPS
-              href: storage-https-custom-domain-cdn.md
             - name: Onveranderbare blobs
               href: storage-blob-immutable-storage.md
-            - name: Advanced Threat Protection
+            - name: Geavanceerde beveiliging tegen bedreigingen
               href: ../common/storage-advanced-threat-protection.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Beveiligde TLS voor Azure Storage-client inschakelen
-              href: ../common/storage-security-tls.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Veilige overdracht vereisen
-              href: ../common/storage-require-secure-transfer.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Algemene Azure-beveiligingskenmerken
               href: ../common/storage-security-attributes.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: De gegevensredundantie
@@ -288,7 +280,7 @@
           href: storage-blob-pageblob-overview.md
     - name: Procedures
       items:
-        - name: Opslagaccounts
+        - name: Opslagaccounts beheren
           items:
             - name: Een blok-blob-opslagaccount maken
               href: storage-blob-create-account-block-blob.md
@@ -296,7 +288,7 @@
               href: ../common/storage-account-manage.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Een opslagaccount upgraden
               href: ../common/storage-account-upgrade.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: Beveiligen
+        - name: Blobgegevens beveiligen
           items:
             - name: Toegang tot blobgegevens autoriseren
               items:
@@ -304,16 +296,16 @@
                   items:
                     - name: Portal
                       href: ../common/storage-access-blobs-queues-portal.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                    - name: CLI of PowerShell
+                    - name: PowerShell of Azure CLI
                       href: ../common/storage-auth-aad-script.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: Toegangsrechten beheren met RBAC
                   items:
                     - name: Portal
                       href: ../common/storage-auth-aad-rbac-portal.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                    - name: CLI
-                      href: ../common/storage-auth-aad-rbac-cli.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                     - name: PowerShell
                       href: ../common/storage-auth-aad-rbac-powershell.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                    - name: Azure-CLI
+                      href: ../common/storage-auth-aad-rbac-cli.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: Verifiëren met Azure AD
                   items:
                     - name: Verifiëren met een beheerde identiteit
@@ -323,14 +315,18 @@
                 - name: Autoriseren met gedeelde sleutel
                   items:
                     - name: Verbindingsreeksen configureren
-                      href: ../common/storage-configure-connection-string.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+                      href: ../common/storage-configure-connection-string.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                     - name: De Azure Storage REST API gebruiken
                       href: ../common/storage-rest-api-auth.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Firewalls en virtuele netwerken configureren
-              href: ../common/storage-network-security.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
-            - name: Blobs versleutelen en ontsleutelen met Azure Key Vault
-              href: storage-encrypt-decrypt-blobs-key-vault.md
-            - name: Clientversleuteling
+            - name: Door de klant beheerde sleutels configureren voor serviceversleuteling
+              items:
+                - name: Portal
+                  href: ../common/storage-encryption-keys-portal.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: PowerShell
+                  href: ../common/storage-encryption-keys-powershell.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: Azure-CLI
+                  href: ../common/storage-encryption-keys-cli.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: Versleuteling aan de clientzijde configureren
               items:
                 - name: .NET
                   href: ../common/storage-client-side-encryption.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
@@ -338,10 +334,14 @@
                   href: ../common/storage-client-side-encryption-java.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: Python
                   href: ../common/storage-client-side-encryption-python.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Beveiligde TLS voor Azure Storage-client inschakelen
-              href: ../common/storage-security-tls.md
-            - name: Veilige overdracht vereisen
-              href: ../common/storage-require-secure-transfer.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+            - name: Netwerkbeveiliging configureren
+              items:
+                - name: Firewalls en virtuele netwerken configureren
+                  href: ../common/storage-network-security.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: Veilige overdracht vereisen
+                  href: ../common/storage-require-secure-transfer.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: Transport Layer Security inschakelen
+                  href: ../common/storage-security-tls.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: Herstel na noodgeval
           items:
             - name: Failover van account initiëren
@@ -354,6 +354,8 @@
           href: storage-properties-metadata.md
         - name: Een statische website hosten
           href: storage-blob-static-website.md
+        - name: Azure CDN toewijzen aan een aangepast domein voor toegang via HTTPS
+          href: storage-https-custom-domain-cdn.md
         - name: Een aangepast domein configureren
           href: storage-custom-domain-name.md
         - name: Gebeurtenissen routeren naar een aangepast eindpunt
@@ -557,10 +559,8 @@
           href: data-lake-storage-best-practices.md
         - name: Beveiliging
           items:
-            - name: Handleiding voor de beveiliging van big data-analyse
-              href: ../common/storage-data-lake-storage-security-guide.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Azure-opslagversleuteling
-              href: ../common/storage-service-encryption.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: Overzicht van opslagbeveiliging
+              href: ../common/storage-security-guide.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Toegangsbeheer
               href: data-lake-storage-access-control.md
     - name: Procedures
@@ -575,16 +575,22 @@
           items:
             - name: Firewalls en virtuele netwerken configureren
               href: ../common/storage-network-security.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Aangepaste sleutels voor Azure Storage-versleuteling beheren
-              href: ../common/storage-service-encryption-customer-managed-keys.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: Door de klant beheerde sleutels configureren voor serviceversleuteling
+              items:
+                - name: Portal
+                  href: ../common/storage-encryption-keys-portal.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: PowerShell
+                  href: ../common/storage-encryption-keys-powershell.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: Azure-CLI
+                  href: ../common/storage-encryption-keys-cli.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Toegangsrechten beheren met RBAC
               items:
                 - name: Portal
                   href: ../common/storage-auth-aad-rbac-portal.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: CLI
-                  href: ../common/storage-auth-aad-rbac-cli.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: PowerShell
                   href: ../common/storage-auth-aad-rbac-powershell.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: Azure-CLI
+                  href: ../common/storage-auth-aad-rbac-cli.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Machtigingen instellen op bestands- en directory-niveau
               href: ../blobs/data-lake-storage-how-to-set-permissions-storage-explorer.md
         - name: Integreren met Azure-services
