--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -153,6 +153,8 @@
           href: storage-troubleshoot-windows-file-connection-problems.md
         - name: Problemen met Azure Files in Linux oplossen
           href: storage-troubleshoot-linux-file-connection-problems.md
+        - name: Problemen met de prestaties van Azure Files oplossen
+          href: storage-troubleshooting-files-performance.md
         - name: Problemen met Azure Files Sync oplossen
           href: storage-sync-files-troubleshoot.md
 - name: Naslaginformatie
